--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,7 @@
   --foreground: #171717;
 }
 
-:root[data-theme="dark"] {
-  --background: #0a0a0a;
-  --foreground: #ededed;
-}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -17,16 +14,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
+
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Rubik, Arial, Helvetica, sans-serif;
   overflow-x: hidden;
 }
